Modificato quanto richiesto nella revisione

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+    Modificato quanto richiesto nella revisione.
+    - Eliminati <p> interni ad <a>.
+    - Eliminati <br> usati per dare spazio tra gli articoli.
+    - Eliminati link interni a <button>.
+    
+-->
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -102,11 +110,10 @@
                     <h4>Cos'è il linguaggio HTML e come impararlo</h4>
                 </a>
                 <a href="https://aulab.it/notizia/250/cose-il-linguaggio-html-e-come-impararlo?_gl=1*u1deiz*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>Il linguaggio HTML (Hypertext Markup Language) è uno dei più conosciuti e diffusi: lo si trova infatti praticamente in tutte le pagine web esistenti. È una scelta popolare tra i principianti che si…   </p>
+                    Il linguaggio HTML (Hypertext Markup Language) è uno dei più conosciuti e diffusi: lo si trova infatti praticamente in tutte le pagine web esistenti. È una scelta popolare tra i principianti che si…
                 </a>
-                <a href="https://aulab.it/notizia/250/cose-il-linguaggio-html-e-come-impararlo?_gl=1*u1deiz*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>
+                <button>Leggi tutto</button>
             </article>
             <article> <!--articolo JS-->
                 <a href="https://aulab.it/notizia/195/corso-javascript-online-cosa-ce-da-sapere?_gl=1*1541wnn*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
@@ -118,11 +125,10 @@
                     <h4>Corso Javascript online: cosa c’è da sapere</h4>
                 </a>
                 <a href="https://aulab.it/notizia/195/corso-javascript-online-cosa-ce-da-sapere?_gl=1*1541wnn*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>Essere uno sviluppatore web vuol dire imparare più linguaggi di programmazione per poter creare diversi tipi di applicazioni.  Per ogni applicazione, la maggior parte delle volte, …  </p>
+                    Essere uno sviluppatore web vuol dire imparare più linguaggi di programmazione per poter creare diversi tipi di applicazioni.  Per ogni applicazione, la maggior parte delle volte, …
                 </a>
-                <a href="https://aulab.it/notizia/195/corso-javascript-online-cosa-ce-da-sapere?_gl=1*1541wnn*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>
+                <button>Leggi tutto</button>
             </article>
             <article> <!--articolo php-->
                 <a href="https://aulab.it/notizia/192/come-imparare-a-programmare-con-un-corso-php?_gl=1*pamab4*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
@@ -134,17 +140,13 @@
                     <h4>Come imparare a programmare con un corso PHP</h4>
                 </a>
                 <a href="https://aulab.it/notizia/192/come-imparare-a-programmare-con-un-corso-php?_gl=1*pamab4*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>Un buon programmatore, si sa, necessita di un ampio bagaglio di conoscenze per potersi districare tra le difficoltà che questo mestiere comporta. Oggi le richieste sul mercato sono molteplic… </p>
+                    Un buon programmatore, si sa, necessita di un ampio bagaglio di conoscenze per potersi districare tra le difficoltà che questo mestiere comporta. Oggi le richieste sul mercato sono molteplic…
                 </a>
-                <a href="https://aulab.it/notizia/192/come-imparare-a-programmare-con-un-corso-php?_gl=1*pamab4*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>
+                <button>Leggi tutto</button>
             </article>
         </section>
-        <!--Articoli generici, <br> usato solo per lasciare spazio-->
-        <br>
-        <br>
-        <br>
+        <!--Articoli generici-->
         <section class="blog-articoli-total">
             <h2>Leggi anche</h2>
             <article> <!--articolo java backend-->
@@ -157,11 +159,10 @@
                     <h4>Perchè scegliere Java per il backend development</h4>
                 </a>
                 <a href="https://aulab.it/perche-scegliere-java-per-il-backend-development?_gl=1*1wrt3vx*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>Nel mondo dello sviluppo software, la scelta del linguaggio di programmazione per il backend development è cruciale. Tra le molte opzioni disponibili, il linguaggio Java continua a essere una scelta … </p>
+                    Nel mondo dello sviluppo software, la scelta del linguaggio di programmazione per il backend development è cruciale. Tra le molte opzioni disponibili, il linguaggio Java continua a essere una scelta …
                 </a>
-                <a href="https://aulab.it/perche-scegliere-java-per-il-backend-development?_gl=1*1wrt3vx*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>
+                <button>Leggi tutto</button>
             </article>
             <article> <!--articolo ai-->
                 <a href="https://aulab.it/cosa-sono-le-allucinazioni-nellintelligenza-artificiale?_gl=1*1avnrqc*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
@@ -173,11 +174,10 @@
                     <h4>Cosa sono le “allucinazioni” nell’intelligenza artificiale</h4>
                 </a>
                 <a href="https://aulab.it/cosa-sono-le-allucinazioni-nellintelligenza-artificiale?_gl=1*1avnrqc*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>L’intelligenza artificiale (AI) sta rivoluzionando numerosi settori, dal riconoscimento vocale e facciale, alla guida automatica, alla produzione di contenuti, agevolando la vita come il lavoro di mol…</p>
+                    L’intelligenza artificiale (AI) sta rivoluzionando numerosi settori, dal riconoscimento vocale e facciale, alla guida automatica, alla produzione di contenuti, agevolando la vita come il lavoro di mol…
                 </a>
-                <a href="https://aulab.it/cosa-sono-le-allucinazioni-nellintelligenza-artificiale?_gl=1*1avnrqc*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>    
+                <button>Leggi tutto</button>
             </article>
             <article> <!--articolo cybersecurity-->
                 <a href="https://aulab.it/cyber-sicurezza-come-salvare-le-password-nel-database-in-modo-sicuro?_gl=1*1fq5ar*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
@@ -189,11 +189,10 @@
                     <h4>Cyber sicurezza: come salvare le password nel database in modo sicuro</h4>
                 </a>
                 <a href="https://aulab.it/cyber-sicurezza-come-salvare-le-password-nel-database-in-modo-sicuro?_gl=1*1fq5ar*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <p>La cyber-security è diventata una preoccupazione cruciale nell’era digitale. Con l’aumento degli attacchi informatici e delle violazioni dei dati, proteggere le informazioni sensibili è fondamentale…</p>
+                    La cyber-security è diventata una preoccupazione cruciale nell’era digitale. Con l’aumento degli attacchi informatici e delle violazioni dei dati, proteggere le informazioni sensibili è fondamentale…
                 </a>
-                <a href="https://aulab.it/cyber-sicurezza-come-salvare-le-password-nel-database-in-modo-sicuro?_gl=1*1fq5ar*_up*MQ..*_ga*NjM1OTYwNjkxLjE3MjAxMTk2ODQ.*_ga_CLQWCBG221*MTcyMDExOTY4My4xLjAuMTcyMDExOTY4My4wLjAuNzI2NDgyMDE3" target="_blank">
-                    <button>Leggi tutto</button>
-                </a>
+                <br>
+                <button>Leggi tutto</button>
             </article>
         </section>
     </main>
